# ontologize

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: biocyc.py  cli.py  ontology.py
src/ontologize/: __main__.py  biocyc.py  cli.py  defaults.py  ontology.py
tests/: compounds.csv  escher_diff_pathways.xlsx  quinate.csv  reaction_pathways.tsv  subgen.csv  subgen.html  subgenerational_gene_ids.txt  subgenerational_gene_ids2.txt  test_genes.py  test_property.py  test_queries.py  test_reaction_pathways.py  test_subgen.py
